# ai-reliability-platform

./: .gitignore  README.md  pyproject.toml
configs/: app.yaml
data/: agent_memory.json
gateway/: 告警接入.md
services/agent_runtime/app/: main.py
services/agent_runtime/app/action/: executor.py  mock_executor.py  models.py  planner.py
services/agent_runtime/app/agent/: base.py
services/agent_runtime/app/aggregator/: base.py  simple.py
services/agent_runtime/app/change/: argocd.py
services/agent_runtime/app/evaluation/: base.py  evaluator.py  factory.py  models.py  registry.py  runner.py  scenario_test.py
services/agent_runtime/app/graph/: factory.py  graph.py  node.py
services/agent_runtime/app/incident/: enums.py  state.py
services/agent_runtime/app/llm/: base.py  client.py  factory.py  models.py  provider_factory.py  registry.py
services/agent_runtime/app/memory/: base.py  manager.py  models.py  store.py
services/agent_runtime/app/model/: context.py  result.py
services/agent_runtime/app/observability/: collector.py  execution.py  models.py
services/agent_runtime/app/observation/: base.py  factory.py  manager.py  models.py  normalizer.py  registry.py
services/agent_runtime/app/pipeline/: base.py  (+2 more)
services/agent_runtime/tests/: test_executor.py  test_llm_config.py  test_mock_llm.py  test_noise_agent.py  test_prometheus_tool.py  test_tools.py
services/gateway/: Makefile
services/gateway/app/: main.py  routers.py
services/gateway/tests/: test_parser.py
services/noise-agent/app/: models.py  rule_engine.py
tests/: test_settings.py
(+60 files in other folders)
